Fixed Horizontal Scrolling on Top Priority and Basic Info Page

--- a/src/OnboardingSPA/components/HeadingWithSubHeading/stylesheet.scss
+++ b/src/OnboardingSPA/components/HeadingWithSubHeading/stylesheet.scss
@@ -3,7 +3,7 @@ $black: var(--nfd-onboarding-black);
 $primary-color: var(--nfd-onboarding-primary);
 
 .nfd-main-heading{
-    width: 96vw;
+    width: 96%;
 
     &__title{
         color: $black;
